clusters/kubernetes/flux-system/webhook-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: flux.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - flux.slfhst.io
    secretName: flux-cert-prod
  rules:
  - host: flux.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
